--- a/sorted-tree/ROOT.html
+++ b/sorted-tree/ROOT.html
@@ -3,18 +3,18 @@
 <base target="main">
 </head>
 <body>
-<p align="center"><b>Test Run:01/19/2019   5:06:50.335 PM</b></p><font color="blue"><H2  align="center">ROOT</H2></font><p align="center">Note: * indicates a violation test case</p>
+<p align="center"><b>Test Run:01/20/2019   10:51:49.296 AM</b></p><font color="blue"><H2  align="center">ROOT</H2></font><p align="center">Note: * indicates a violation test case</p>
 <table border=1 align="center">
-<tr><td bgcolor="#FF0000" colspan="3">&nbsp;</td></tr><tr><td align="center" colspan="3">FAILED (10 failed & 3 passed out of 13)</td></tr>
+<tr><td bgcolor="#FF0000" colspan="3">&nbsp;</td></tr><tr><td align="center" colspan="3">FAILED (5 failed & 8 passed out of 13)</td></tr>
 <tr><td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Case Type</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Passed</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Total</b></font></td></tr>
 <tr><td align="center"><font color="blue"><b>Violation</b></font></td>
 <td align="center">0</td><td align="center">0</td></tr>
 <tr><td align="center"><font color="blue"><b>Boolean</b></font></td>
-<td align="center">3</td><td align="center">13</td></tr>
+<td align="center">8</td><td align="center">13</td></tr>
 <tr><td align="center"><font color="blue"><b>All Cases</b></font></td>
-<td align="center">3</td><td align="center">13</td></tr>
+<td align="center">8</td><td align="center">13</td></tr>
 <tr><td align="center" bgcolor="#000080"><font color="#FFCC00"><b>State</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Contract Violation</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Test Name</b></font></td></tr>
@@ -49,26 +49,26 @@
 <td>t2: add Left and Right nodes to root
 <br>but not in sorted order</td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t3: test inorder traversal command <br>but it's not in sorted key K order <br>(LL,1)(Bob,2)(LR,3)(Zak,4)(RL,5)(Alexa,6)(RR,7) </td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t4: test inorder traversal query
 <br>more tests needed</td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t5: check sibling query</td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t6: check inner_child query
 <br>RL is inner child of Alexa</td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t7: check outer_child root query</td>
 </tr>
 <tr><td bgcolor="#008080" align="center"><font color="#FFCC00"><b>Test3</b></font></td>
