--- a/sorted-tree/BST_TESTS.html
+++ b/sorted-tree/BST_TESTS.html
@@ -3,18 +3,18 @@
 <base target="main">
 </head>
 <body>
-<p align="center"><b>Test Run:01/20/2019   11:58:26.213 AM</b></p><font color="blue"><H2  align="center">BST_TESTS</H2></font><p align="center">Note: * indicates a violation test case</p>
+<p align="center"><b>Test Run:01/20/2019   12:37:50.374 PM</b></p><font color="blue"><H2  align="center">BST_TESTS</H2></font><p align="center">Note: * indicates a violation test case</p>
 <table border=1 align="center">
-<tr><td bgcolor="#FF0000" colspan="3">&nbsp;</td></tr><tr><td align="center" colspan="3">FAILED (9 failed & 5 passed out of 14)</td></tr>
+<tr><td bgcolor="#FF0000" colspan="3">&nbsp;</td></tr><tr><td align="center" colspan="3">FAILED (5 failed & 9 passed out of 14)</td></tr>
 <tr><td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Case Type</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Passed</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Total</b></font></td></tr>
 <tr><td align="center"><font color="blue"><b>Violation</b></font></td>
 <td align="center">0</td><td align="center">0</td></tr>
 <tr><td align="center"><font color="blue"><b>Boolean</b></font></td>
-<td align="center">5</td><td align="center">14</td></tr>
+<td align="center">9</td><td align="center">14</td></tr>
 <tr><td align="center"><font color="blue"><b>All Cases</b></font></td>
-<td align="center">5</td><td align="center">14</td></tr>
+<td align="center">9</td><td align="center">14</td></tr>
 <tr><td align="center" bgcolor="#000080"><font color="#FFCC00"><b>State</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Contract Violation</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Test Name</b></font></td></tr>
@@ -23,28 +23,28 @@
 <td align="center">NONE</td>
 <td>t0: add to tree</td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t1: remove nodes without children</td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t2: remove nodes with left child</td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t3: remove nodes with right child</td>
 </tr>
 <tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<td align="center">Postcondition violated.</td>
 <td>t4: remove nodes with two children</td>
 </tr>
 <tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<td align="center">Postcondition violated.</td>
 <td>t5: remove nodes with two children, string version</td>
 </tr>
 <tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<td align="center">Postcondition violated.</td>
 <td>t6: many insertions/removals(invariant testing)</td>
 </tr>
 <tr><td><font color="red"><b>FAILED</b></font></td>
@@ -67,8 +67,8 @@
 <td align="center">NONE</td>
 <td>t11: element test</td>
 </tr>
-<tr><td><font color="red"><b>FAILED</b></font></td>
-<td align="center">Check assertion violated.</td>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
 <td>t12: count</td>
 </tr>
 <tr><td><font color="green"><b>PASSED</b></font></td>
