--- a/sorted-tree/RBT_TESTS.html
+++ b/sorted-tree/RBT_TESTS.html
@@ -3,7 +3,7 @@
 <base target="main">
 </head>
 <body>
-<p align="center"><b>Test Run:01/20/2019   11:58:26.282 AM</b></p><font color="blue"><H2  align="center">RBT_TESTS</H2></font><p align="center">Note: * indicates a violation test case</p>
+<p align="center"><b>Test Run:01/20/2019   12:37:50.450 PM</b></p><font color="blue"><H2  align="center">RBT_TESTS</H2></font><p align="center">Note: * indicates a violation test case</p>
 <table border=1 align="center">
 <tr><td bgcolor="#FF0000" colspan="3">&nbsp;</td></tr><tr><td align="center" colspan="3">FAILED (16 failed & 1 passed out of 17)</td></tr>
 <tr><td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Case Type</b></font></td>
