--- a/sorted-tree/ROOT.html
+++ b/sorted-tree/ROOT.html
@@ -3,18 +3,18 @@
 <base target="main">
 </head>
 <body>
-<p align="center"><b>Test Run:01/20/2019   12:12:15.968 PM</b></p><font color="blue"><H2  align="center">ROOT</H2></font><p align="center">Note: * indicates a violation test case</p>
+<p align="center"><b>Test Run:01/20/2019   12:37:50.471 PM</b></p><font color="blue"><H2  align="center">ROOT</H2></font><p align="center">Note: * indicates a violation test case</p>
 <table border=1 align="center">
-<tr><td bgcolor="#FF0000" colspan="3">&nbsp;</td></tr><tr><td align="center" colspan="3">FAILED (7 failed & 16 passed out of 23)</td></tr>
+<tr><td bgcolor="#FF0000" colspan="3">&nbsp;</td></tr><tr><td align="center" colspan="3">FAILED (37 failed & 26 passed out of 63)</td></tr>
 <tr><td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Case Type</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Passed</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Total</b></font></td></tr>
 <tr><td align="center"><font color="blue"><b>Violation</b></font></td>
 <td align="center">0</td><td align="center">0</td></tr>
 <tr><td align="center"><font color="blue"><b>Boolean</b></font></td>
-<td align="center">16</td><td align="center">23</td></tr>
+<td align="center">26</td><td align="center">63</td></tr>
 <tr><td align="center"><font color="blue"><b>All Cases</b></font></td>
-<td align="center">16</td><td align="center">23</td></tr>
+<td align="center">26</td><td align="center">63</td></tr>
 <tr><td align="center" bgcolor="#000080"><font color="#FFCC00"><b>State</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Contract Violation</b></font></td>
 <td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Test Name</b></font></td></tr>
@@ -117,6 +117,169 @@
 <tr><td><font color="green"><b>PASSED</b></font></td>
 <td align="center">NONE</td>
 <td>jt8: test tree equality, same sequence and paths</td>
+</tr>
+<tr><td bgcolor="#008080" align="center"><font color="#FFCC00"><b>Test5</b></font></td>
+<td bgcolor="#008080" align="center" colspan="2"><font color="#FFCC00">BST_TESTS</font></td></tr><tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t0: add to tree</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t1: remove nodes without children</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t2: remove nodes with left child</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t3: remove nodes with right child</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Postcondition violated.</td>
+<td>t4: remove nodes with two children</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Postcondition violated.</td>
+<td>t5: remove nodes with two children, string version</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Postcondition violated.</td>
+<td>t6: many insertions/removals(invariant testing)</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Postcondition violated.</td>
+<td>t7: find min</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Postcondition violated.</td>
+<td>t8: find max</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t9: test wipe_out</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t10: test as_array</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t11: element test</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t12: count</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t13: test path(only for BST)</td>
+</tr>
+<tr><td bgcolor="#008080" align="center"><font color="#FFCC00"><b>Test6</b></font></td>
+<td bgcolor="#008080" align="center" colspan="2"><font color="#FFCC00">RBT_TESTS</font></td></tr><tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t0: add to tree</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t1: remove nodes without children</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t2: remove nodes with left child</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t3: remove nodes with right child</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t4: remove nodes with two children</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t5: remove nodes with two children, string version</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t6: many insertions/removals(invariant testing)</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t7: find min</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t8: find max</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t9: test wipe_out</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t10: test as_array</td>
+</tr>
+<tr><td><font color="green"><b>PASSED</b></font></td>
+<td align="center">NONE</td>
+<td>t11: element test</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t12: count</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t13: test path(only for RBT)</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t20: sibling test</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t21: outer child test</td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">Class invariant violated.</td>
+<td>t22: inner child test</td>
+</tr>
+<tr><td bgcolor="#008080" align="center"><font color="#FFCC00"><b>Test7</b></font></td>
+<td bgcolor="#008080" align="center" colspan="2"><font color="#FFCC00">RBT_TESTS2</font></td></tr><tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
+</tr>
+<tr><td><font color="red"><b>FAILED</b></font></td>
+<td align="center">NONE</td>
+<td></td>
 </tr>
 </table></body>
 </html>
